--- a/SaintSender.DesktopUI/Views/MainWindow.xaml
+++ b/SaintSender.DesktopUI/Views/MainWindow.xaml
@@ -14,13 +14,13 @@
             <Button x:Name="NextButton" Content="Next" HorizontalAlignment="Left" Height="31" Margin="715,10,0,0" VerticalAlignment="Top" Width="56"/>
             <Button x:Name="PrevButton" Content="Prev" HorizontalAlignment="Left" Height="31" Margin="654,10,0,0" VerticalAlignment="Top" Width="56"/>
             <Button x:Name="RefreshButton" Content="Refresh" HorizontalAlignment="Left" Height="31" Margin="569,10,0,0" VerticalAlignment="Top" Width="56"/>
-            <ListView HorizontalAlignment="Left" Height="342" Margin="170,57,0,0" VerticalAlignment="Top" Width="601">
+            <ListView x:Name="EmailsListView" HorizontalAlignment="Left" Height="342" Margin="170,57,0,0" VerticalAlignment="Top" Width="601">
                 <ListView.View>
                     <GridView>
-                        <GridViewColumn Header="Sender" Width="100"/>
-                        <GridViewColumn Header="Subject" Width="150"/>
-                        <GridViewColumn Header="Date" Width="100"/>
-                        <GridViewColumn Header="Body" Width="200"/>
+                        <GridViewColumn Header="Sender" Width="100" DisplayMemberBinding="{Binding Sender}"/>
+                        <GridViewColumn Header="Subject" Width="150" DisplayMemberBinding="{Binding Subject}"/>
+                        <GridViewColumn Header="Date" Width="100" DisplayMemberBinding="{Binding Date}"/>
+                        <GridViewColumn Header="Body" Width="200" DisplayMemberBinding="{Binding Body}"/>
                     </GridView>
                 </ListView.View>
             </ListView>
