--- a/SaintSender.DesktopUI/Views/MainWindow.xaml
+++ b/SaintSender.DesktopUI/Views/MainWindow.xaml
@@ -9,7 +9,7 @@
       Title="Inbox">
         <Grid>
             <Label x:Name="WelcomeText" Content="Welcome user!" HorizontalAlignment="Left" Height="31" Margin="10,10,0,0" VerticalAlignment="Top" Width="149"/>
-            <Button x:Name="NewEmailButton" Content="New Email" HorizontalAlignment="Left" Height="31" Margin="10,57,0,0" VerticalAlignment="Top" Width="127"/>
+            <Button x:Name="NewEmailButton" Content="New Email" HorizontalAlignment="Left" Height="31" Margin="10,57,0,0" VerticalAlignment="Top" Width="127" Click="NewEmailButton_Click"/>
             <Button x:Name="BackupButton" Content="Backup" HorizontalAlignment="Left" Height="31" Margin="10,104,0,0" VerticalAlignment="Top" Width="127"/>
             <Button x:Name="NextButton" Content="Next" HorizontalAlignment="Left" Height="31" Margin="774,10,0,0" VerticalAlignment="Top" Width="56"/>
             <Button x:Name="PrevButton" Content="Prev" HorizontalAlignment="Left" Height="31" Margin="713,10,0,0" VerticalAlignment="Top" Width="56"/>
