--- a/SaintSender.DesktopUI/Views/NewEmail.xaml
+++ b/SaintSender.DesktopUI/Views/NewEmail.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="SaintSender.DesktopUI.Views.NewEmail"
+﻿<Window x:Class="SaintSender.DesktopUI.Views.NewEmail"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -24,4 +24,4 @@
             </StackPanel>
         </StackPanel>
     </Grid>
-</Page>
+</Window>
