--- a/SaintSender.DesktopUI/Views/EmailDetailWindow.xaml
+++ b/SaintSender.DesktopUI/Views/EmailDetailWindow.xaml
@@ -7,13 +7,12 @@
         mc:Ignorable="d"
         Title="EmailDetailWindow" Height="550" Width="800">
     <Grid>
-        <Label Content="Subject of email" HorizontalAlignment="Left" Height="35" Margin="150,10,0,0" VerticalAlignment="Top" Width="464"/>
-        <Label Content="Sender name + email" HorizontalAlignment="Left" Height="30" Margin="150,45,0,0" VerticalAlignment="Top" Width="154" RenderTransformOrigin="0.315,3.235"/>
-        <TextBox x:Name="EmailDetails" HorizontalAlignment="Left" Height="408" Margin="150,89,0,0" VerticalAlignment="Top" Width="618">
-        </TextBox>
+        <Label Content="{Binding Path=Subject}" HorizontalAlignment="Left" Height="35" Margin="150,10,0,0" VerticalAlignment="Top" Width="464"/>
+        <Label Content="{Binding Path=Sender}" HorizontalAlignment="Left" Height="30" Margin="150,45,0,0" VerticalAlignment="Top" Width="154" RenderTransformOrigin="0.315,3.235"/>
+        <TextBox HorizontalAlignment="Left" Height="408" Margin="150,89,0,0" VerticalAlignment="Top" Width="618" Text="{Binding Path=Body}"/>
         <Button Content="Reply" HorizontalAlignment="Left" Height="23" Margin="27,133,0,0" VerticalAlignment="Top" Width="94"/>
         <Button Content="Go Back" HorizontalAlignment="Left" Height="23" Margin="27,89,0,0" VerticalAlignment="Top" Width="94"/>
-        <Label Content="Date" HorizontalAlignment="Left" Height="30" Margin="654,45,0,0" VerticalAlignment="Top" Width="114"/>
+        <Label Content="{Binding Path=Date}" HorizontalAlignment="Left" Height="30" Margin="619,45,0,0" VerticalAlignment="Top" Width="149" FontSize="11"/>
 
     </Grid>
 </Window>
