--- a/SaintSender.DesktopUI/Views/NewEmail.xaml
+++ b/SaintSender.DesktopUI/Views/NewEmail.xaml
@@ -1,11 +1,11 @@
-﻿<Page x:Class="SaintSender.DesktopUI.Views.NewEmail"
+﻿<Window x:Class="SaintSender.DesktopUI.Views.NewEmail"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:SaintSender.DesktopUI.Views"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="550" d:DesignWidth="800"
       Title="NewEmail">
 
     <Grid Background="#FFA8A8A8">
@@ -17,11 +17,11 @@
             <Label Content="Subject:" Target="{Binding ElementName=subject}"/>
             <TextBox x:Name="subject" Width="100" HorizontalAlignment="Left"/>
             <Label Content="Body:" Target="{Binding ElementName=body}"/>
-            <TextBox x:Name="body" HorizontalAlignment="Left" Height="250" Width="780" Background="White" AcceptsReturn="True" AcceptsTab="True"/>
+            <TextBox x:Name="body" HorizontalAlignment="Left" Height="309" Width="780" Background="White" AcceptsReturn="True" AcceptsTab="True" Margin="0,0,-6,0"/>
             <StackPanel Orientation="Horizontal">
                 <Button x:Name="send" Content="Send" Width="50" HorizontalAlignment="Left" VerticalAlignment="Bottom" Click="SendBtn_Click"/>
                 <Button x:Name="cancel" Content="Cancel" Width="50" HorizontalAlignment="Left" Click="CancelBtn_Click"/>
             </StackPanel>
         </StackPanel>
     </Grid>
-</Page>
+</Window>
