--- a/SaintSender.DesktopUI/Views/LoginScreen.xaml
+++ b/SaintSender.DesktopUI/Views/LoginScreen.xaml
@@ -17,7 +17,7 @@
             <TextBox x:Name="txtUsername" Background="#93A3B1" Foreground="White" FontSize="20" Margin="30 10"/>
             <Label Content="Password" Foreground="White" FontSize="25" Margin=" 30 0"/>
             <PasswordBox x:Name="txtPassword" Background="#93A3B1" Foreground="White" FontSize="20" Margin="30 10"/>
-            <Button x:Name="btnSubmit" Content="Submit" Click="btnSubmit_Click" Background="#93A3B1" Foreground="White" FontSize="20" Margin="80 10"/>
+            <Button x:Name="btnSubmit" Content="Submit" Click="BtnLogin_Click" Background="#93A3B1" Foreground="White" FontSize="20" Margin="80 10"/>
             <Button x:Name="NetCheck" Margin="120 10" Content="Net" Background="#93A3B1" Foreground="White"  Click="NetCheck_Click" />
         </StackPanel>
     </Border>
