--- a/SaintSender.DesktopUI/Views/EmailDetailWindow.xaml
+++ b/SaintSender.DesktopUI/Views/EmailDetailWindow.xaml
@@ -5,14 +5,16 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SaintSender.DesktopUI.Views"
         mc:Ignorable="d"
-        Title="EmailDetailWindow" Height="550" Width="800">
+        Title="EmailDetailWindow" Height="550" Width="800"  Background="#93A3B1">
     <Grid>
-        <Label Content="{Binding Path=Subject}" HorizontalAlignment="Left" Height="35" Margin="150,10,0,0" VerticalAlignment="Top" Width="464"/>
-        <Label Content="{Binding Path=Sender}" HorizontalAlignment="Left" Height="30" Margin="150,45,0,0" VerticalAlignment="Top" Width="154" RenderTransformOrigin="0.315,3.235"/>
+        <Label Foreground="White" FontSize="13" Content="{Binding Path=Subject}" HorizontalAlignment="Left" Height="35" Margin="150,10,0,0" VerticalAlignment="Top" Width="464"/>
+        <Label Foreground="White" FontSize="13" Content="{Binding Path=Sender}" HorizontalAlignment="Left" Height="30" Margin="150,45,0,0" VerticalAlignment="Top" Width="154" RenderTransformOrigin="0.315,3.235"/>
         <TextBox HorizontalAlignment="Left" Height="408" Margin="150,89,0,0" VerticalAlignment="Top" Width="618" Text="{Binding Path=Body}"/>
-        <Button Content="Reply" HorizontalAlignment="Left" Height="23" Margin="27,133,0,0" VerticalAlignment="Top" Width="94" Click="ReplyButton_Click"/>
-        <Button Content="Go Back" HorizontalAlignment="Left" Height="23" Margin="27,89,0,0" VerticalAlignment="Top" Width="94"/>
-        <Label Content="{Binding Path=Date}" HorizontalAlignment="Left" Height="30" Margin="619,45,0,0" VerticalAlignment="Top" Width="149" FontSize="11"/>
+        <Button Background="#7C898B" Foreground="White" FontSize="15" Content="Reply" HorizontalAlignment="Left" Height="23" Margin="27,133,0,0" VerticalAlignment="Top" Width="94" Click="ReplyButton_Click"/>
+        <Button Background="#7C898B" Foreground="White" FontSize="15" Content="Go Back" HorizontalAlignment="Left" Height="23" Margin="27,89,0,0" VerticalAlignment="Top" Width="94"/>
+        <Label Foreground="White" Content="{Binding Path=Date}" HorizontalAlignment="Left" Height="30" Margin="619,45,0,0" VerticalAlignment="Top" Width="149" FontSize="11"/>
+        <Label Foreground="White" FontWeight="Bold" FontSize="13" Content="Subject:" HorizontalAlignment="Left" Margin="27,10,0,481" Width="118" Height="35"/>
+        <Label Foreground="White" FontWeight="Bold" FontSize="13" Content="From:" HorizontalAlignment="Left" Margin="27,45,0,446" Width="118" Height="35"/>
 
     </Grid>
 </Window>
