--- a/SaintSender.DesktopUI/Views/MainWindow.xaml
+++ b/SaintSender.DesktopUI/Views/MainWindow.xaml
@@ -6,36 +6,37 @@
       xmlns:local="clr-namespace:SaintSender.DesktopUI.Views"
       mc:Ignorable="d"
       d:DesignHeight="450" d:DesignWidth="900"
-      Title="Inbox">
+      Title="Inbox" Background="#93A3B1">
     <Window.Resources>
-        
-            <Style x:Key="ItemStyle" TargetType="{x:Type ListViewItem}">
-                <EventSetter Event="MouseDoubleClick" Handler="ListViewItem_MouseDoubleClick" />
-            </Style>
-       
+
+        <Style x:Key="ItemStyle" TargetType="{x:Type ListViewItem}">
+            <EventSetter Event="MouseDoubleClick" Handler="ListViewItem_MouseDoubleClick" />
+        </Style>
+
     </Window.Resources>
     <Grid>
-            <Label x:Name="WelcomeText" Content="Welcome user!" HorizontalAlignment="Left" Height="31" Margin="10,10,0,0" VerticalAlignment="Top" Width="149"/>
-            <Button x:Name="NewEmailButton" Content="New Email" HorizontalAlignment="Left" Height="31" Margin="10,57,0,0" VerticalAlignment="Top" Width="127" Click="NewEmailButton_Click"/>
-            <Button x:Name="BackupButton" Content="Backup" HorizontalAlignment="Left" Height="31" Margin="10,104,0,0" VerticalAlignment="Top" Width="127" Click="BackupButton_Click"/>
-            <Button x:Name="NextButton" Content="Next" HorizontalAlignment="Left" Height="31" Margin="774,10,0,0" VerticalAlignment="Top" Width="56" Click="NextButton_Click"/>
-            <Button x:Name="PrevButton" Content="Prev" HorizontalAlignment="Left" Height="31" Margin="713,10,0,0" VerticalAlignment="Top" Width="56" Click="PrevButton_Click"/>
-                <Button x:Name="RefreshButton" Content="Refresh" HorizontalAlignment="Left" Height="31" Margin="626,10,0,0" VerticalAlignment="Top" Width="56" Click="RefreshButton_Click"/>
-                <ListView x:Name="EmailsListView" ItemContainerStyle="{StaticResource ItemStyle}" HorizontalAlignment="Left" Height="342" Margin="170,57,0,0" VerticalAlignment="Top" Width="660">
+        <Label x:Name="WelcomeText" Foreground="White" FontWeight="Bold" Content="Welcome" HorizontalAlignment="Left" Height="31" Margin="10,5,0,0" VerticalAlignment="Top" Width="149" FontSize="18"/>
+        <Label x:Name="WelcomeUserText" Foreground="White" Content="user!" HorizontalAlignment="Left" Height="31" Margin="10,36,0,0" VerticalAlignment="Top" Width="149" FontSize="15"/>
+        <Button Background="#7C898B" Foreground="White" FontSize="20" x:Name="NewEmailButton" Content="New Email" HorizontalAlignment="Left" Height="31" Margin="10,75,0,0" VerticalAlignment="Top" Width="127" Click="NewEmailButton_Click"/>
+        <Button  Background="#7C898B" Foreground="White" FontSize="20" x:Name="BackupButton" Content="Backup" HorizontalAlignment="Left" Height="32" Margin="10,126,0,0" VerticalAlignment="Top" Width="127" Click="BackupButton_Click"/>
+        <Button  Background="#7C898B" Foreground="White" FontSize="20" x:Name="NextButton" Content="Next" HorizontalAlignment="Left" Height="31" Margin="814,10,0,0" VerticalAlignment="Top" Width="56" Click="NextButton_Click"/>
+        <Button  Background="#7C898B" Foreground="White" FontSize="20" x:Name="PrevButton" Content="Prev" HorizontalAlignment="Left" Height="31" Margin="753,10,0,0" VerticalAlignment="Top" Width="56" Click="PrevButton_Click"/>
+        <Button Background="#7C898B" Foreground="White" FontSize="20" x:Name="RefreshButton" Content="Refresh" HorizontalAlignment="Left" Height="31" Margin="652,10,0,0" VerticalAlignment="Top" Width="75" Click="RefreshButton_Click"/>
+        <ListView x:Name="EmailsListView" ItemContainerStyle="{StaticResource ItemStyle}" HorizontalAlignment="Left" Height="342" Margin="170,57,0,0" VerticalAlignment="Top" Width="700">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="Sender" Width="130" DisplayMemberBinding="{Binding Sender}"/>
-                    <GridViewColumn Header="Subject" Width="150" DisplayMemberBinding="{Binding Subject}"/>
-                    <GridViewColumn Header="Body" Width="250" DisplayMemberBinding="{Binding Body}"/>
+                    <GridViewColumn Header="Sender" Width="160" DisplayMemberBinding="{Binding Sender}"/>
+                    <GridViewColumn Header="Subject" Width="130" DisplayMemberBinding="{Binding Subject}"/>
+                    <GridViewColumn Header="Body" Width="260" DisplayMemberBinding="{Binding Body}"/>
                     <GridViewColumn Header="Date" Width="120" DisplayMemberBinding="{Binding Date}"/>
                 </GridView>
             </ListView.View>
         </ListView>
-            <TextBox x:Name="SerchTextBox" HorizontalAlignment="Left" Height="31" TextWrapping="Wrap" Text="Search here..." VerticalAlignment="Top" Width="161" Margin="170,10,0,0"/>
-            <Button x:Name="SearchButton" Click="Search_Submit" Content="Search" HorizontalAlignment="Left" Height="31" Margin="336,10,0,0" VerticalAlignment="Top" Width="56"/>
-        <Button x:Name="LogoutlButton" Click="LogoutlButton_Click"  Content="Logout" HorizontalAlignment="Left" Height="31" Margin="10,151,0,0" VerticalAlignment="Top" Width="127"/>
-        <Button x:Name="ForgetMeButton" Click="Delete_Credentials" Content="Forget Me" HorizontalAlignment="Left" Height="31"  VerticalAlignment="Top" Width="127" Margin="10,197,0,0"/>
+        <TextBox x:Name="SerchTextBox" HorizontalAlignment="Left" Height="31" TextWrapping="Wrap" Text="Search here..." VerticalAlignment="Top" Width="161" Margin="170,10,0,0"/>
+        <Button Background="#7C898B" Foreground="White" FontSize="20" x:Name="SearchButton" Click="Search_Submit" Content="Search" HorizontalAlignment="Left" Height="31" Margin="336,10,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button Background="#7C898B" Foreground="White" FontSize="20" x:Name="LogoutlButton" Click="LogoutlButton_Click"  Content="Logout" HorizontalAlignment="Left" Height="32" Margin="10,176,0,0" VerticalAlignment="Top" Width="127"/>
+        <Button Background="#7C898B" Foreground="White" FontSize="20" x:Name="ForgetMeButton" Click="Delete_Credentials" Content="Forget Me" HorizontalAlignment="Left" Height="30"  VerticalAlignment="Top" Width="127" Margin="10,226,0,0"/>
     </Grid>
 
- </Window>
+</Window>
 
